--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-use-draggable-scroll": "^0.4.7",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
