--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:refresh": "npx knex migrate:rollback && npx knex migrate:latest",
+    "seed": "npx knex seed:run",
+    "mrs": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "knex": "^2.3.0",
+    "mysql2": "^2.3.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
