--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/home/Home.component.jsx", "components/StyledComponent/globalStyle"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/home/Home.component.jsx",
+    "components/StyledComponent/globalStyle",
+    "database/index.js",
+    "database/index.js"
+  ],
   "exclude": ["node_modules"]
 }
