--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "knex": "^2.3.0",
     "mysql2": "^2.3.3",
     "next": "12.3.1",
