--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.13.1",
+    "@types/firebase": "^3.2.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "knex": "^2.3.0",
     "mysql2": "^2.3.3",
     "next": "12.3.1",
@@ -31,8 +34,11 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
 }
