--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
